test/errors/list/insert_bad_index_type.np
l = [1]
l.insert("one", 2)
